--- a/style.css
+++ b/style.css
@@ -3,34 +3,74 @@
 
     margin: 0%;
     padding: 0%;
-
+   
 
 }
 .navbar{
 
     display: flex;
     height: 80px;
-    background-color: aquamarine;
+    background-color: #400d40;
     align-items: center;
+    justify-content: space-around;
+    color: white;
 }
 
 .nav-primary-logo{
 
     
-    background-color: brown;
+    background-color: #400d40;
 }
+
 
 .navbar-primary{
 
-    background-color: bisque;
+    background-color: #400d40;
     width: 30%;
     height: 45%;
+    
+    
 
 
 }
 
-.nav-primary-left{
+.navbar-primary-left{
     justify-content: flex-end;
+    background-color: #400d40;
+    display: flex;
+    width: 50%;
+    height: 75%;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.navbar-primary-left-item-conectarse{
+    font-size: 14px;
+    background-color: #400d40;
+    width: 80px;
+    height: 21px;
+    margin: 16px;
+    color: white;
+
+}
+
+.navbar-primary-left-item-hcev{
+    height: 41px;
+    background-color: #400d40;
+    margin: 16px;
+    border: ridge;
+    border-color: white;
+    color: white;
+}
+
+
+
+.navbar-primary-left-item-pg{
+    background-color: white;
+    padding: 11px;
+    color: white;
+
 }
 
 
@@ -44,6 +84,109 @@ ul{
     display: flex;
     JUSTIFY-CONTENT: space-around;
     font-size: 14px;
+    color: white;
  
 }
 
+
+.container{
+
+    display: flex;
+    color: white;
+}
+
+.container-1{
+
+    background-color: #400d40;
+    width: 50%;
+    height: 500px;
+}
+
+.container-1-item-1{
+
+    
+    height: 175px;
+    font-size: 23px;
+}
+
+.container-1-item-2{
+
+    
+    width: 86%;
+    height: 18%;
+}
+
+.container-1-item-3{
+
+   
+    height: 47%;
+}
+
+.icono-google{
+    width: 7%;
+    
+    
+}
+
+.item3-register-mail{
+
+    height: 23%;
+    padding-top: 7% ;
+    color: #400d40 solid;
+    
+}
+
+.item3-register-google{
+
+    display: flex;
+    height: 24%;
+    padding-top: 2%;
+    
+}
+
+.register-mail{
+    width: 100%;
+    height: 100%;
+    color: #400d40;
+    
+}
+.register-google{
+    width: 100%;
+    background-color: #4285f4;
+    height: 103%;
+    color: white;
+    
+    
+}
+
+.item-3-sub{
+    font-size: 15px;
+    padding-top: 2%;
+}
+
+
+
+
+
+.container-2{
+
+    background-color: #400d40;
+    width: 50%;
+    height: 500px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.container-2-video{
+
+    
+    width: 96%;
+    height: 83%;
+}
+
+.container-video{
+
+    width: 106%
+}
