--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@
     height: 75%;
     align-items: center;
     justify-content: center;
-    color: white;
+    
+    
 }
 
 .navbar-primary-left-item-conectarse{
@@ -52,6 +53,7 @@
     height: 21px;
     margin: 16px;
     color: white;
+    
 
 }
 
@@ -61,7 +63,12 @@
     margin: 16px;
     border: ridge;
     border-color: white;
-    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 15px;
+  
+    
 }
 
 
@@ -69,7 +76,8 @@
 .navbar-primary-left-item-pg{
     background-color: white;
     padding: 11px;
-    color: white;
+    color: white solid;
+    
 
 }
 
@@ -91,7 +99,9 @@ ul{
 }
 
 
-
+a.navbar-primary-left-item-conectarse{
+    color: white;
+}
 
 .container{
 
@@ -128,8 +138,7 @@ ul{
 }
 
 .icono-google{
-    width: 7%;
-    
+    width: 10%;
     
 }
 
@@ -146,6 +155,7 @@ ul{
     display: flex;
     height: 24%;
     padding-top: 2%;
+   
     
 }
 
@@ -185,7 +195,7 @@ ul{
     padding-right: 5%;
 }
 
-.container-2-video{
+.container-2-video-top{
 
     
     width: 96%;
@@ -266,10 +276,136 @@ align-items: center;
 }
 
 .container-text-sub{
-    background-color: #f4ede4;
-    width: 77%
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 76%;
+    height: 49%
 }
 
 .video-src{
     width: 91%
 }
+
+
+
+
+
+
+
+
+
+
+.video-explication{
+    width: 100%;
+    background-color: white;
+    display: flex;
+    height: 380px;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+
+.video-explication-1{
+    background-color: white;
+    width: 50%;
+    height: 380px;
+}
+
+.video-explication-2{
+    background-color: white;
+    width: 50%;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.video-explication-2-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 76%;
+    height: 49%
+
+}
+
+
+.container-0-separator-bajo{
+    background-color: #f4ede4;
+    height: 129px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-0-separator-sub-bajo{
+    background-color: #f4ede4;
+    padding-top: 2%;
+    font-size: 19px;
+    font-weight: bold;
+
+}
+
+.container-4-elements{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 7%;
+    padding-right: 7%;
+}
+
+.element-1{
+
+    background-color: blue;
+    width: 300px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+   
+}
+
+.element-image{
+    width: 270px;
+}
+
+.footer-1{
+
+   width: 100%;
+}
+
+
+.footer-image{
+    width: 22%;
+    background-color: aquamarine;
+}
+
+.footer-pq-slack{
+    background-color: #400d40;
+    width: 15%;
+}
+
+.footer-product{
+
+}
+
+.footer-price{
+
+}
+
+.footer-recursos{
+
+
+}
+
+.footer-empresa{
+
+
+}
+
+
